Fix scrollbar color

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -86,13 +86,12 @@ body .root .content.theme {
   header {
     a[data-testid="h1"] {
       background: var(--primary-color);
-      border: 1px solid var(--black-color);
-      color: var(--white-color);
+      color: var(--secondary-color);
     }
   }
 
   ul.body {
-    scrollbar-color: var(--primary-color) var(--white-color);
+    scrollbar-color: var(--primary-color) var(--secondary-color);
   }
 }
 
